--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,14 @@ nav{
 .banner-img{
     width: 556px;
     height: 438px;
+  
 }
 .banner-img img{
     width: 100%;
+}
+.banner-img img:hover{
+    transform: rotate(20deg) scale(1.3); 
+    transition: 1s;
 }
 .watch-live-btn i{
     margin-left: 8px;
@@ -238,6 +243,8 @@ footer{
 }
 /* Responsive for mobile */
 @media only screen and (max-width: 767px) {
+    
+
     .container{
         width: 300px;
     }
@@ -276,7 +283,7 @@ footer{
 
     }
     .banner-img {
-        margin-top: 40px;
+        margin-top: 86px;
         width: 300px;
         height: auto;
     }
@@ -341,6 +348,10 @@ footer{
         width: 100%;
         height: auto;
     
+    }
+    .banner-img img:hover{
+        transform: rotate(20deg) scale(.8); 
+        transition: 1s;
     }
 
 }
