--- a/css/style.css
+++ b/css/style.css
@@ -85,13 +85,12 @@ nav{
 .banner-img{
     width: 556px;
     height: 438px;
-  
 }
 .banner-img img{
     width: 100%;
 }
 .banner-img img:hover{
-    transform: rotate(20deg) scale(1.3); 
+    transform: rotate(20deg) scale(.8); 
     transition: 1s;
 }
 .watch-live-btn i{
@@ -113,10 +112,12 @@ nav{
 /* blogs section */
 .blogs-section{
     display: flex;
-    justify-content: center;
+    align-items: center;
+   flex-direction: column;
 }
 .blogs{
     margin-top: 70px;
+    margin-bottom: 60px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-row-gap: 27px;
@@ -152,6 +153,16 @@ nav{
     color: #6C6C6C;
     margin: 0;
 }
+.see-more-btn a{
+    background-color: #E02C6D;
+    padding: 10px 24px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #FFFFFF;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+}
 /* highlight-section */
 .highlight{
     display: flex;
@@ -161,7 +172,7 @@ nav{
 .highlight-section{
     display: flex;
     justify-content: center;
-    margin: 165px 0px 158px;
+    margin: 65px 0px 58px;
 }
 .highlight-content{
     width: 469px;
@@ -201,6 +212,70 @@ nav{
     height: 427px;
 
 }
+.point-table-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.point-table-section>h2{
+    margin: 16px 0px 10px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 40px;
+}
+thead {
+    background-color: #3f87a6;
+    color: #fff;
+
+}
+
+tbody {
+
+    background-color: #e4f0f5;
+}
+
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    letter-spacing: 1px;
+    font-family: 'Poppins', sans-serif;
+    font-size: .8rem;
+    width: 100%;
+}
+
+td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 5px 10px;
+}
+
+td {
+    text-align: center;
+}
+/* video section */
+.video-section{
+    margin: 40px 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.video-section>h2{
+    margin: 16px 0px 10px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 40px;
+}
+.video-section>iframe{
+    width:560px;
+    height:315px; 
+}
+
 /* social-section */
 .social-section{
     display: flex;
@@ -233,7 +308,6 @@ footer{
 .copy-right{
     display: flex;
     justify-content: center;
-
     margin-right: 36px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -299,6 +373,10 @@ footer{
         width: auto;
         height: auto;
     }
+    .video-section>iframe{
+        width:260px;
+        height:150px; 
+    }
     .logo {
         width: 300px;
     }
@@ -347,7 +425,6 @@ footer{
     .highlight-img img{
         width: 100%;
         height: auto;
-    
     }
     .banner-img img:hover{
         transform: rotate(20deg) scale(.8); 
